// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReachTextEditorComponent renders nothing when no EditorState is provided 1`] = `
<fieldset
  className="makeStyles-root-1"
/>
`;

exports[`ReachTextEditorComponent renders the editor when editor state is provided 1`] = `
<fieldset
  className="makeStyles-root-1"
>
  <div
    className="prosemirrorContainer"
  />
</fieldset>
`;
